@@ -1,3 +1,5 @@
+[B]1.10.2:[/B]
+- fixed stream resoling
 [B]1.10.1:[/B]
 - fixed A-Z archive
 - fixed images download
